--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "firebase": "^9.6.1",
     "framer-motion": "^5.5.4",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "sass": "^1.44.0"
   },
