--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
     "typescript": "4.5.3"
   }
 }
