--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "cookie": "^0.4.1",
     "firebase": "^9.6.1",
     "framer-motion": "^5.5.4",
@@ -15,7 +18,8 @@
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
-    "sass": "^1.44.0"
+    "sass": "^1.44.0",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
