--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookie": "^0.4.1",
     "firebase": "^9.6.1",
     "framer-motion": "^5.5.4",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
