--- a/package.json
+++ b/package.json
@@ -8,25 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "cookie": "^0.4.1",
-    "firebase": "^9.6.1",
-    "framer-motion": "^5.5.4",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "cookie": "^0.4.2",
+    "firebase": "^9.6.8",
+    "framer-motion": "^6.2.8",
+    "lottie-web": "^5.9.1",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
-    "sass": "^1.44.0",
-    "sharp": "^0.29.3"
+    "sass": "^1.49.9",
+    "sharp": "^0.30.3"
   },
   "devDependencies": {
-    "@types/node": "16.11.12",
-    "@types/react": "17.0.37",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
-    "postcss": "^8.4.5",
-    "typescript": "4.5.3"
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.40",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.12",
+    "typescript": "4.6.2"
   }
 }
